--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -6,7 +6,7 @@
 
 - name: install nodejs
   ansible.builtin.dnf:
-    name: {{ item }}
+    name: "{{ item }}"
     state: present
     loop: 
       - nodejs
