--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -1,8 +1,8 @@
 - name: disable nodejs
-  ansible.builtin.command: dnf disable nodejs -y
+  ansible.builtin.command: dnf module disable nodejs -y
 
 - name: enable nodejs version 20
-  ansible.builtin.command: dnf enable nodejs:20 -y
+  ansible.builtin.command: dnf module enable nodejs:20 -y
 
 - name: install nodejs
   ansible.builtin.dnf:
