--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -12,6 +12,7 @@
   ansible.builtin.unarchive:
     src:  https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
     dest: /usr/share/nginx/html
+    remote_src: yes
 
 - name: config reverse proxy 
   ansible.builtin.template:
